@@ -1,22 +1,115 @@
+//
+//package com.example.springapp.config;
+//
+//import com.example.springapp.security.JwtFilter;
+//import com.example.springapp.security.CustomUserDetailsService;
+//import lombok.RequiredArgsConstructor;
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
+//import org.springframework.security.authentication.AuthenticationManager;
+//import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+//import org.springframework.security.config.http.SessionCreationPolicy;
+//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+//import org.springframework.security.crypto.password.PasswordEncoder;
+//import org.springframework.security.web.SecurityFilterChain;
+//import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.CorsConfigurationSource;
+//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+//import java.util.*;
+//
+//@Configuration
+//@RequiredArgsConstructor
+//public class SecurityConfig {
+//
+//    private final JwtFilter jwtFilter;
+//    private final CustomUserDetailsService userDetailsService;
+//
+//    // ----------------- PASSWORD ENCODER -----------------
+//    @Bean
+//    public PasswordEncoder passwordEncoder() {
+//        return new BCryptPasswordEncoder();
+//    }
+//
+//    // ----------------- AUTHENTICATION MANAGER -----------------
+//    @Bean
+//    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+//        return config.getAuthenticationManager();
+//    }
+//
+//    // ----------------- CORS CONFIGURATION -----------------
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//
+//        configuration.setAllowedOrigins(Arrays.asList(
+//                "http://localhost:5173",
+//                "http://10.74.31.23:5173"
+//        ));
+//        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//        configuration.setAllowedHeaders(List.of("*"));
+//        configuration.setAllowCredentials(true);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
+//
+//    // ----------------- SECURITY FILTER CHAIN -----------------
+//    @Bean
+//    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+//        http
+//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//                .csrf(csrf -> csrf.disable())
+//                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+//                .authorizeHttpRequests(auth -> auth
+//                        .requestMatchers("/api/auth/**").permitAll()
+//                        .requestMatchers("/api/events/all", "/qrcodes/**").permitAll()
+//                        .requestMatchers("/api/attendance/**").permitAll()
+//                        .requestMatchers("/images/**").permitAll()
+//                        .requestMatchers("/**/*.png", "/**/*.jpg", "/**/*.jpeg", "/**/*.gif").permitAll()
+//                        .requestMatchers("/**/*.css", "/**/*.js").permitAll()
+//                        .requestMatchers("/fill-form", "/fill-form/**").permitAll()
+//                        .requestMatchers("/uploads/**").permitAll()
+//                        .requestMatchers("/api/help/**").permitAll()
+//                        .requestMatchers("/api/donations/**").permitAll()
+//                        .requestMatchers("/api/events/create").hasAnyRole("NGO", "USER")
+//                        .anyRequest().authenticated()
+//                )
+//                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+//
+//        return http.build();
+//    }
+//}
 
 package com.example.springapp.config;
 
 import com.example.springapp.security.JwtFilter;
 import com.example.springapp.security.CustomUserDetailsService;
+
 import lombok.RequiredArgsConstructor;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+
 import org.springframework.security.config.http.SessionCreationPolicy;
+
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+
 import java.util.*;
 
 @Configuration
@@ -26,58 +119,96 @@ public class SecurityConfig {
     private final JwtFilter jwtFilter;
     private final CustomUserDetailsService userDetailsService;
 
-    // ----------------- PASSWORD ENCODER -----------------
+    // ---------------- PASSWORD ENCODER ----------------
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // ----------------- AUTHENTICATION MANAGER -----------------
+    // ---------------- AUTHENTICATION MANAGER ----------------
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-    // ----------------- CORS CONFIGURATION -----------------
+    // ---------------- CORS CONFIGURATION ----------------
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-//        configuration.setAllowedOrigins(Arrays.asList("http://10.74.31.23:5173"));
+
         configuration.setAllowedOrigins(Arrays.asList(
                 "http://localhost:5173",
                 "http://10.74.31.23:5173"
         ));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "OPTIONS"
+        ));
+
         configuration.setAllowedHeaders(List.of("*"));
+
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 
-    // ----------------- SECURITY FILTER CHAIN -----------------
+    // ---------------- SECURITY FILTER CHAIN ----------------
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
                 .csrf(csrf -> csrf.disable())
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+
                 .authorizeHttpRequests(auth -> auth
+
+                        // AUTH APIs
                         .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/events/all", "/qrcodes/**").permitAll()
-                        .requestMatchers("/api/attendance/**").permitAll()
-                        .requestMatchers("/images/**").permitAll()
-                        .requestMatchers("/**/*.png", "/**/*.jpg", "/**/*.jpeg", "/**/*.gif").permitAll()
-                        .requestMatchers("/**/*.css", "/**/*.js").permitAll()
-                        .requestMatchers("/fill-form", "/fill-form/**").permitAll()
-                        .requestMatchers("/uploads/**").permitAll()
+
+                        // Google login endpoint
+                        .requestMatchers("/api/auth/google").permitAll()
+
+                        // Public APIs
+                        .requestMatchers("/api/events/all").permitAll()
                         .requestMatchers("/api/help/**").permitAll()
                         .requestMatchers("/api/donations/**").permitAll()
-                        .requestMatchers("/api/events/create").hasAnyRole("NGO", "USER")
+
+                        // QR + attendance
+                        .requestMatchers("/qrcodes/**").permitAll()
+                        .requestMatchers("/api/attendance/**").permitAll()
+
+                        // Static files
+                        .requestMatchers("/images/**").permitAll()
+                        .requestMatchers("/uploads/**").permitAll()
+                        .requestMatchers("/**/*.png", "/**/*.jpg", "/**/*.jpeg", "/**/*.gif").permitAll()
+                        .requestMatchers("/**/*.css", "/**/*.js").permitAll()
+
+                        // Public forms
+                        .requestMatchers("/fill-form", "/fill-form/**").permitAll()
+
+                        // Protected APIs
+                        .requestMatchers("/api/events/create")
+                        .hasAnyRole("NGO", "USER")
+
+                        // Everything else requires login
                         .anyRequest().authenticated()
                 )
+
+                // JWT FILTER
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
